infrastructures/OCI/k8s/airflow/airflow-service.yml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  namespace: airflow
  labels:
    app: airflow
    component: webserver
spec:
  type: ClusterIP
  selector:
    app: airflow
    component: webserver
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
