infrastructures/OCI/k8s/airflow/airflow-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: airflow-webserver-https
  namespace: airflow
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`airflow.oci.santocaruso.eu`)
      kind: Rule
      middlewares:
        - name: google-auth
          namespace: traefik
      services:
        - name: airflow-webserver
          port: 8080
  tls:
    certResolver: letsencrypt
